<resources><string name="ApplicationName">Code Cracker</string><string name="AboutTitl">About Code Cracker</string><string name="MorseTitl">Code Cracker - Morse</string><string name="morseKeyTitl">Morse Key</string><string name="morseTableTitl">Morse Table</string><string name="AtoKTitl">Code Cracker - A-K</string><string name="atokKeyTitl">A-K Key</string><string name="atokTableTitl">A-K Table</string><string name="KtoA">Translate K-A</string><string name="SpejdTitl">Code Cracker - Password</string><string name="SpejdKeyTitl">Password Key</string><string name="SpejdTableTitl">Password Table</string><string name="InputPassword">Insert Password</string><string name="SpejdPasswordDouble">The password must never contain the same letter more than once!</string><string name="SpejdPasswordInval">The password must only contain letters! No special characters!</string><string name="AlfaNrTitl">Code Cracker - Alfa Nr.</string><string name="alfaNrKeyTitl">Alfa Nr. key</string><string name="alfaNrTableTitl">Alfa Nr. Table</string><string name="ChineseTitl">Code Cracker - Chinese Text</string><string name="removeSpaceBox">Remove spaces</string><string name="addSpacesBox">Add random spaces</string><!--About page--><string name="aboutText">
    Code Cracker is a spare time project that I have been working on, for educational purposes. It is the first Android application that I have created.
    \n\nThe idea with the app is to be able to read and write various types of codes, such as Morse code, number codes, and a few other types.
    \n\nThis is an early version of the app, and therefore there are still a lot of details that are not completely finished. An example of this is that the tables 
    on the various code types are not dynamic, but a default table is shown. 
  </string><!--Help page--><string name="help_title">Code Cracker - Help</string><string name="help_desc"><b><u>Code Cracker</u></b>
    \nCode Cracker is a tool to read and write various types of codes, such as Morse code, A-K codes and many more.
    \n
  </string><!--Various codes--><string name="help_morse"><b><u>Morse Code</u></b>
    \nMorse Code is translating text and numbers into dots and lines. 
    These codes have been used for many years and are easy to translate back
    \n
  </string><string name="help_atok"><b><u>A - K code</u></b>
    \nA-K code is generated by shifting the alfabet, to start at another letter (K as default).
    So when you want to type A, you type K instead, B will be L, C will be M, and so on. The letter that the
    alfabet is pushed to can be any letter you want, which makes it harder to crack the code, as you need
    the \'seed\' letter, to translate the code back to text
    \n
  </string><string name="help_password"><b><u>Password Code</u></b>
    \nPassword Code is made by writing a password, followed by the rest of the alfabet, in two lines, with
    13 letters in each. When writing the alfabet, you do not write the letters that are already in the
    password. If the password is SPEJD the alfabet would be: SPEJDABCFGHIK-LMNOQRTUVWXYZ. When that is
    written in two lines you simply use the letter above, or below the letter you want to write, so S
    becomes L, A becomes R, and so on. This is even harder to crack, as you need the password to translate
    it.
    \nThe password can only contain each letter once!
    \n
  </string><string name="help_alfanr"><b><u>Alfa Nr. Code</u></b>
    This is a code where the letters are written as numbers. By default A is 1, B is 2 and so on,
    but you can chose another seed number, so A could be 5, B = 6, and so on. A fairly simple code type
    \n
  </string><string name="help_chinese"><b><u>Chinese Text</u></b>
    This is not chinese. It is simpy writing the text backwards, which is confusing (To some). You can
    chose to have the spaces in the text removed before fliping it, and you can have random spaces inserted
    in the \'coded\' text as well, to make it more confusing
    \n
  </string><string name="help_buttons_all"><b><u>Buttons</u></b>
    \nThere are a series of buttons that you will find with all the code types:
    \nCopy output - Copies the translated text to the clipboard, so you can insert it anywhere, to send it
    to a friend, or paste it in the input box, to translate back to text.
    \nClear - Deletes everything from the output box.
    \nTranslate - Translates the text from the input box, and writes the coded text in the output box.
    \n
  </string><string name="help_buttons_some"><b><u>More buttons</u></b>
    \nIn addition to the buttons, shared by all the codes, there are a few, more specific, buttons as well.
    \nShow Translation Table - Most of the codes have this button. It opens a new page, on which the
    translation table can be seen, so you can get a sense of how the code is translated.
    \nSwitch Places - Only morse code has this button. It is used to switch from text input, to morse input.
    This button gives you a set of buttons to write morse code into the input field, to translate to text.
    The buttons provided are a dot, a line, a slash and a delete button, \'del\' (Long-press the del button
    to clear the field).
    \n
  </string><string name="help_fields"><b><u>Additional Fields</u></b>
    \nSome of the codes have some additional fields and selectors, to define the code translation.
    \n\nFirstly the A-K code has a selector to set the seed letter, to define how far the alfabet is pushed.
    \nThe A-K code also has a checkbox to switch the translator to translate back, from K to A.
    \n\nSecondly the Password Code has an input field to write tha password, that you desire.
    \n\nThirdly the Alfa Nr. Code has a selector to decide which number to start from.
    \n\nLastly the Chinese Text has two checkboxes for removing spaces and inserting random spaces,
    respectivly.
    \n
  </string><string name="help_support"><b><u>Support</u></b>
    \nIf you have questions or found a bug or an error, please fell free to contact me at 
    <a href="mailto:dmkolind@nokgodtnok.dk">dmkolind@nokgodtnok.dk</a></string></resources>